<resources>
    <string name="app_name">Bd3PanitiRaul</string>
    <string name="products">Products</string>
    <string name="categories">Categories</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_category_of_products">Select a category of products:</string>
    <string name="add_new_category">Add new category</string>
    <string name="delete_category">Delete category</string>
    <string name="category_name">Category name</string>
    <string name="category_added_correct">Category added successfully</string>
    <string name="category_add_error">Category couldn\'t be added</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_add_category">Add Category</string>
    <string name="alert_dialog_create_category_title">Create new category</string>
    <string name="alert_dialog_create_category_message">Introduce the name of the Category</string>
    <string name="edit_text_add_category_hint">Category name</string>
    <string name="product_list">PRODUCT LIST</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="product_image">Product image</string>
    <string name="add_new_product">ADD NEW PRODUCT</string>
    <string name="order_by_categories">Order by categories</string>
    <string name="order_alphabetically">Order alphabetically</string>
    <string name="button_alphabetically">alphabetically</string>
    <string name="button_categories">Categories</string>
    <string name="product_image_add">Product image</string>
    <string name="product_name_add">Product name</string>
    <string name="alert_dialog_add_product">Add Product</string>
    <string name="product_add_error">Error adding the product, please try again</string>
    <string name="product_added_correct">Product added correctly.</string>
    <string name="delete">DELETE</string>
    <string name="add_to_shopping_list">Add to List</string>
    <string name="image_of_the_product_in_the_list">Image of the product in the list</string>
</resources>