<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/product_list"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/tglOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textOff="@string/order_by_categories"
            android:textOn="@string/order_alphabetically" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="15dp"
                tools:listitem="@layout/product_card_layout" />
        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/add_new_product" />

    </LinearLayout>


</FrameLayout>